--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,4 @@
-$primaryColor: #444;
-$textColorPrimary: #f3f3f3;
-$secondaryColor: #eece1a;
-
-@mixin easeOut {
-  transition: all .5s ease-out;
-}
+@import "config";
 
 * {
   box-sizing: border-box;
@@ -13,6 +7,7 @@ $secondaryColor: #eece1a;
 }
 
 body {
+  @include background;
   overflow-x: hidden;
   min-height: 100vh;
   background-color: $primaryColor;
@@ -47,7 +42,7 @@ h3 {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(
-      lighten($primaryColor, 6),
+      lighten($primaryColor, 1),
       0.5
     ); /* SASS: lighten the color & rgba for transparency*/
   }
@@ -80,7 +75,7 @@ main {
     }
   }
 
-  &:hover {
+  &#home {
     overflow: hidden;
     h1 {
       margin-top: 20vh;
