--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -20,7 +20,7 @@
     transform: rotate(180deg);
 
     .btn-line {
-      opacity: .5;
+      opacity: 0.5;
 
       // line 1
       &:nth-child(1) {
@@ -29,11 +29,104 @@
       // line 2
       &:nth-child(2) {
         transform: rotate(-45deg);
-      } 
+      }
       // line 3
       &:nth-child(3) {
         display: none;
       }
     }
+  }
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primaryColor, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-branding {
+    background: $primaryColor;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide from bottom
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.jpg');
+      border-radius: 50%;
+      border: 3px solid darken($secondaryColor, 15);
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 2rem;
+    text-transform: uppercase;
+    padding: 1em 0;
+    font-weight: 300;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+    &.current {
+      color: $secondaryColor;
+      font-weight: 800;
+    }
+
+    &:hover {
+      color: $secondaryColor;
+    }
+  }
+}
+
+// Delay each nav item slide by 0.1 seconds
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.035s;
   }
 }
