--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,5 @@
-$primaryColor: #444;
+// $primaryColor: #444;
+$primaryColor: #333;
 $textColorPrimary: #f3f3f3;
 $secondaryColor: #eece1a;
 $showHomeImage: true;
@@ -27,6 +28,15 @@ $backgroundOpacity: 0.5;
         z-index: -1;
       }
     }
+  }
+}
+
+// Set Text Color
+@function setTextColor($color) {
+  @if (lightness($color) > 40) {
+    @return #333;
+  } @else {
+    @return #f3f3f3;
   }
 }
 
