--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: setTextColor($primaryColor);
     @include easeOut;
   }
 
@@ -109,7 +109,7 @@
     text-transform: uppercase;
     padding: 1em 0;
     font-weight: 300;
-    color: #fff;
+    color: setTextColor($primaryColor);
     text-decoration: none;
     @include easeOut;
 
