--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,16 @@
     transform: translate(-100%, 0);
     font-size: 24px;
   }
+
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smart Phones
