--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,15 +1,23 @@
 // Widescreens
 @include mediaXl {
-
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops
 @include mediaLg {
-
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 //Tablets 
 @include mediaMd {
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   .lg-heading {
     line-height: 1;
     margin-bottom: 1rem;
@@ -61,6 +69,10 @@
 
 // Smart Phones
 @include mediaSm {
+  .projects {
+    grid-template-columns: 1fr;
+  }
+
   main#home h1 {
     margin-top: 10vh;
   }
